--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "react-router-dom": "^6.18.0",
     "react-scroll-parallax": "^3.4.3",
     "react-slick": "^0.29.0",
+    "react-swal": "^4.0.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
